--- a/.github/workflows/integration.js.yml
+++ b/.github/workflows/integration.js.yml
@@ -30,3 +30,4 @@ jobs:
       - run: npm test
         env:
           TOKEN_SECRET: ${{ secrets.TOKEN_SECRET }}
+          DETACHMENT_ALLOWED_COMPANY_IDS: ${{ secrets.DETACHMENT_ALLOWED_COMPANY_IDS }}
