--- a/package.json
+++ b/package.json
@@ -27,62 +27,62 @@
     "node": "16.18.0"
   },
   "dependencies": {
-    "@google-cloud/storage": "^5.18.3",
-    "@googleapis/drive": "^2.3.0",
-    "@hapi/boom": "^9.1.4",
-    "@hapi/good": "^9.0.1",
-    "@hapi/good-console": "^9.0.1",
-    "@hapi/good-squeeze": "^6.0.0",
-    "@hapi/hapi": "^20.2.1",
-    "@hapi/inert": "^6.0.5",
-    "axios": "^0.26.1",
-    "bcrypt": "^5.0.1",
-    "bignumber.js": "^9.0.2",
-    "cron": "^1.7.2",
-    "date-holidays": "^3.14.4",
+    "@google-cloud/storage": "~5.18.3",
+    "@googleapis/drive": "~2.3.0",
+    "@hapi/boom": "~9.1.4",
+    "@hapi/good": "~9.0.1",
+    "@hapi/good-console": "~9.0.1",
+    "@hapi/good-squeeze": "~6.0.0",
+    "@hapi/hapi": "~20.2.1",
+    "@hapi/inert": "~6.0.5",
+    "axios": "~0.26.1",
+    "bcrypt": "~5.0.1",
+    "bignumber.js": "~9.0.2",
+    "cron": "~1.7.2",
+    "date-holidays": "~3.14.4",
     "docxtemplater": "3.28.1",
-    "dotenv": "^16.0.0",
-    "feedparser-promised": "^2.0.1",
-    "flat": "^5.0.2",
-    "handlebars": "^4.7.5",
-    "hapi-auth-jwt2": "^10.2.0",
-    "hapi-sentry": "^3.2.0",
-    "intl": "^1.2.5",
-    "joi": "^17.6.0",
-    "joi-objectid": "^4.0.2",
-    "jsonwebtoken": "^8.5.1",
-    "jszip": "^3.9.0",
-    "lodash": "^4.17.21",
-    "luxon": "^2.3.1",
-    "moment": "^2.29.2",
-    "moment-business-days": "^1.2.0",
-    "moment-range": "^4.0.2",
-    "moment-timezone": "^0.5.34",
-    "mongodb": "^4.2.2",
-    "mongoose": "^6.2.10",
-    "mongoose-autopopulate": "^0.16.1",
-    "mongoose-lean-virtuals": "^0.9.0",
-    "nodemailer": "^6.7.3",
-    "pdfmake": "^0.2.5",
-    "pizzip": "^3.1.1",
+    "dotenv": "~16.0.0",
+    "feedparser-promised": "~2.0.1",
+    "flat": "~5.0.2",
+    "handlebars": "~4.7.5",
+    "hapi-auth-jwt2": "~10.2.0",
+    "hapi-sentry": "~3.2.0",
+    "intl": "~1.2.5",
+    "joi": "~17.6.0",
+    "joi-objectid": "~4.0.2",
+    "jsonwebtoken": "~8.5.1",
+    "jszip": "~3.9.0",
+    "lodash": "~4.17.21",
+    "luxon": "~2.3.1",
+    "moment": "~2.29.2",
+    "moment-business-days": "~1.2.0",
+    "moment-range": "~4.0.2",
+    "moment-timezone": "~0.5.34",
+    "mongodb": "~4.2.2",
+    "mongoose": "~6.2.10",
+    "mongoose-autopopulate": "~0.16.1",
+    "mongoose-lean-virtuals": "~0.9.0",
+    "nodemailer": "~6.7.3",
+    "pdfmake": "~0.2.5",
+    "pizzip": "~3.1.1",
     "qrcode": "git+https://github.com/sophiemoustard/node-qrcode.git",
-    "qs": "^6.10.3",
-    "randomatic": "^3.1.1",
-    "shelljs": "^0.8.5",
-    "util": "^0.12.3",
-    "uuid": "^8.3.1",
-    "xmlbuilder": "^15.1.1"
+    "qs": "~6.10.3",
+    "randomatic": "~3.1.1",
+    "shelljs": "~0.8.5",
+    "util": "~0.12.3",
+    "uuid": "~8.3.1",
+    "xmlbuilder": "~15.1.1"
   },
   "devDependencies": {
-    "@hapi/eslint-plugin-hapi": "^4.3.6",
-    "eslint": "^8.12.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-mocha": "^10.0.3",
-    "expect": "^27.5.1",
-    "form-data": "^4.0.0",
-    "get-stream": "^6.0.0",
-    "mocha": "^9.2.2",
-    "sinon": "^13.0.1"
+    "@hapi/eslint-plugin-hapi": "~4.3.6",
+    "eslint": "~8.12.0",
+    "eslint-config-airbnb-base": "~15.0.0",
+    "eslint-plugin-import": "~2.26.0",
+    "eslint-plugin-mocha": "~10.0.3",
+    "expect": "~27.5.1",
+    "form-data": "~4.0.0",
+    "get-stream": "~6.0.0",
+    "mocha": "~9.2.2",
+    "sinon": "~13.0.1"
   }
 }
