--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test:unit": "NODE_ENV=test mocha --timeout 999999 --colors --exit tests/unit/*/*",
     "test:integration": "NODE_ENV=test mocha --timeout 999999 --colors --exit --file tests/integration/helpers/initializeDB tests/integration/*",
     "test:tag": "NODE_ENV=test mocha --timeout 999999 --colors --recursive --exit --grep '#tag' --file tests/integration/helpers/initializeDB tests/*",
+    "test:seeds": "NODE_ENV=test mocha --timeout 999999 --colors --recursive --exit --file tests/integration/helpers/initializeDB tests/integration/seed/seedsVerification.test.js",
     "test": "NODE_ENV=test mocha --timeout 999999 --colors --recursive --exit --file tests/integration/helpers/initializeDB tests/*",
     "test-watch": "nodemon --exec 'npm test'",
     "debug": "nodemon --inspect",
