--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@hapi/good-squeeze": "~6.0.0",
     "@hapi/hapi": "~20.2.1",
     "@hapi/inert": "~6.0.5",
-    "axios": "~0.26.1",
+    "axios": "^1.3.1",
     "bcrypt": "~5.1.0",
     "bignumber.js": "~9.1.1",
     "cron": "~2.1.0",
