COM-3468: fix launch bug

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "scripts": {
     "test:unit": "NODE_ENV=test mocha --timeout 999999 --colors --exit tests/unit/*/*",
-    "test:integration": "NODE_ENV=test mocha --timeout 999999 --colors --exit --file tests/integration/helpers/initializeDB tests/integration/*",
-    "test:tag": "NODE_ENV=test mocha --timeout 999999 --colors --recursive --exit --grep '#tag' --file tests/integration/helpers/initializeDB tests/*",
-    "test:seeds": "NODE_ENV=test mocha --timeout 999999 --colors --recursive --exit --file tests/integration/helpers/initializeDB tests/integration/seed/seedsVerification.test.js",
-    "test": "NODE_ENV=test mocha --timeout 999999 --colors --recursive --exit --file tests/integration/helpers/initializeDB tests/*",
+    "test:integration": "NODE_ENV=test mocha --timeout 999999 --colors --exit --file server.js tests/integration/helpers/initializeDB tests/integration/*",
+    "test:tag": "NODE_ENV=test mocha --timeout 999999 --colors --recursive --exit --grep '#tag' --file server.js tests/integration/helpers/initializeDB tests/*",
+    "test:seeds": "NODE_ENV=test mocha --timeout 999999 --colors --recursive --exit --file server.js tests/integration/helpers/initializeDB tests/integration/seed/seedsVerification.test.js",
+    "test": "NODE_ENV=test mocha --timeout 999999 --colors --recursive --exit --file server.js tests/integration/helpers/initializeDB tests/*",
     "test-watch": "nodemon --exec 'npm test'",
     "debug": "nodemon --inspect",
     "lint": "eslint ./ --ext .js -c .eslintrc.js",
