--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "date-holidays": "~3.21.2",
     "docxtemplater": "3.28.1",
     "dotenv": "~16.3.1",
-    "feedparser-promised": "~2.0.1",
     "flat": "~5.0.2",
     "form-data": "~4.0.0",
     "get-stream": "~6.0.0",
@@ -62,7 +61,7 @@
     "moment-range": "~4.0.2",
     "moment-timezone": "~0.5.34",
     "mongodb": "~4.2.2",
-    "mongoose": "~6.8.3",
+    "mongoose": "~6.11.4",
     "mongoose-autopopulate": "~0.17.1",
     "mongoose-lean-virtuals": "~0.9.0",
     "nodemailer": "~6.9.4",
@@ -77,7 +76,7 @@
     "xmlbuilder": "~15.1.1"
   },
   "devDependencies": {
-    "@hapi/eslint-plugin-hapi": "~4.3.6",
+    "@hapi/eslint-plugin": "~5.1.0",
     "eslint": "~8.46.0",
     "eslint-config-airbnb-base": "~15.0.0",
     "eslint-plugin-import": "~2.28.0",
