--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
   "dependencies": {
     "@google-cloud/storage": "~6.9.0",
     "@googleapis/drive": "~4.0.1",
-    "@hapi/boom": "~9.1.4",
+    "@hapi/boom": "~10.0.1",
     "@hapi/good": "~9.0.1",
     "@hapi/good-console": "~9.0.1",
     "@hapi/good-squeeze": "~6.0.0",
-    "@hapi/hapi": "~20.2.1",
-    "@hapi/inert": "~6.0.5",
+    "@hapi/hapi": "~21.3.2",
+    "@hapi/inert": "~7.1.0",
     "axios": "^1.3.1",
     "bcrypt": "~5.1.0",
     "bignumber.js": "~9.1.1",
@@ -48,8 +48,8 @@
     "form-data": "~4.0.0",
     "get-stream": "~6.0.0",
     "handlebars": "~4.7.5",
-    "hapi-auth-jwt2": "~10.2.0",
-    "hapi-sentry": "~3.2.0",
+    "hapi-auth-jwt2": "~10.4.0",
+    "hapi-sentry": "~4.0.0",
     "intl": "~1.2.5",
     "joi": "~17.7.0",
     "joi-objectid": "~4.0.2",
@@ -77,7 +77,7 @@
     "xmlbuilder": "~15.1.1"
   },
   "devDependencies": {
-    "@hapi/eslint-plugin-hapi": "~4.3.6",
+    "@hapi/eslint-plugin": "~5.1.0",
     "eslint": "~8.30.0",
     "eslint-config-airbnb-base": "~15.0.0",
     "eslint-plugin-import": "~2.26.0",
