--- a/.github/workflows/integration.js.yml
+++ b/.github/workflows/integration.js.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18.17.0
-      - run: npm ci
+      - run: yarn install
       - run: npm run build --if-present
       - run: npm test
         env:
