--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@hapi/hapi": "~21.3.2",
     "@hapi/inert": "~7.1.0",
     "axios": "^1.3.1",
-    "bcrypt": "~5.1.0",
+    "bcryptjs": "^2.4.3",
     "bignumber.js": "~9.1.1",
     "cron": "~2.1.0",
     "date-holidays": "~3.16.13",
