--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "form-data": "~4.0.0",
     "handlebars": "~4.7.5",
     "hapi-auth-jwt2": "~10.5.1",
-    "hapi-sentry": "~4.0.1-2",
+    "hapi-sentry": "~4.0.0",
     "intl": "~1.2.5",
     "joi": "~17.12.1",
     "joi-objectid": "~4.0.2",
