--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "NODE_ENV=test mocha --timeout 999999 --colors --recursive --exit --file server.js tests/integration/helpers/initializeDB tests/*",
     "test-watch": "nodemon --exec 'npm test'",
     "debug": "nodemon --inspect",
-    "lint": "eslint ./ --ext .js -c .eslintrc.js",
+    "lint": "eslint .",
     "prestart": "echo $MAX_OLD_SPACE_SIZE",
     "start": "node --optimize_for_size --max_old_space_size=$MAX_OLD_SPACE_SIZE --gc_interval=100 server.js"
   },
@@ -74,9 +74,9 @@
   },
   "devDependencies": {
     "@hapi/eslint-plugin": "~6.0.0",
-    "eslint": "~8.56.0",
+    "eslint": "~9.12.0",
     "eslint-config-airbnb-base": "~15.0.0",
-    "eslint-plugin-import": "~2.29.1",
+    "eslint-plugin-import": "~2.31.0",
     "eslint-plugin-mocha": "~10.5.0",
     "expect": "~29.7.0",
     "mocha": "~10.7.3",
