--- a/.github/workflows/integration.js.yml
+++ b/.github/workflows/integration.js.yml
@@ -31,3 +31,4 @@ jobs:
         env:
           TOKEN_SECRET: ${{ secrets.TOKEN_SECRET }}
           DETACHMENT_ALLOWED_COMPANY_IDS: ${{ secrets.DETACHMENT_ALLOWED_COMPANY_IDS }}
+          SINGLE_COURSES_SUBPROGRAM_IDS: ${{ secrets.SINGLE_COURSES_SUBPROGRAM_IDS }}
